--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django
-uvicorn
-asgiref
-whitenoise
-dj-database-url
-gunicorn             
-psycopg2-binary
-python-dotenv         
+Django>=6.0,<7.0
+gunicorn>=21.0
+uvicorn>=0.23
+asgiref>=3.7
+whitenoise>=6.5
+dj-database-url>=1.0
+psycopg2-binary>=2.9
+python-dotenv>=1.0
+yt-dlp>=2025.12.10
